fix: [MGP-236] Fix z-index for offcanvas filters so they dont overlap with product tile in grid

--- a/src/pages/category/category.scss
+++ b/src/pages/category/category.scss
@@ -153,7 +153,7 @@ $page-category_offcanvas_filters_desktop: deep-get(
         $page-category_offcanvas_filters_mobile or
             $page-category_offcanvas_filters_desktop
     ) {
-        .cs-toolbar__item--offcanvas {
+        .#{$ns}toolbar__item--offcanvas {
             @if not($page-category_offcanvas_filters_mobile) {
                 @include media(
                     '<#{$page-category_offcanvas_filters_breakpoint}'
@@ -173,7 +173,7 @@ $page-category_offcanvas_filters_desktop: deep-get(
 
         @if not($page-category_offcanvas_filters_mobile) {
             @include media('<#{$page-category_offcanvas_filters_breakpoint}') {
-                .cs-offcanvas-filters__drawer {
+                .#{$ns}offcanvas-filters__drawer {
                     position: static;
                     background: none;
                     transition: initial;
@@ -184,8 +184,8 @@ $page-category_offcanvas_filters_desktop: deep-get(
                     transform: none;
                 }
 
-                .cs-offcanvas-filters__headline,
-                .cs-offcanvas-filters__close {
+                .#{$ns}offcanvas-filters__headline,
+                .#{$ns}offcanvas-filters__close {
                     display: none;
                 }
             }
@@ -193,11 +193,11 @@ $page-category_offcanvas_filters_desktop: deep-get(
 
         @if not($page-category_offcanvas_filters_desktop) {
             @include media('>=#{$page-category_offcanvas_filters_breakpoint}') {
-                .cs-offcanvas-filters {
-                    z-index: 1;
+                .#{$ns}offcanvas-filters {
+                    z-index: 10;
                 }
 
-                .cs-offcanvas-filters__drawer {
+                .#{$ns}offcanvas-filters__drawer {
                     position: static;
                     background: none;
                     transition: initial;
@@ -208,8 +208,8 @@ $page-category_offcanvas_filters_desktop: deep-get(
                     transform: none;
                 }
 
-                .cs-offcanvas-filters__headline,
-                .cs-offcanvas-filters__close {
+                .#{$ns}offcanvas-filters__headline,
+                .#{$ns}offcanvas-filters__close {
                     display: none;
                 }
             }
